feat(ci): Disable scan-operator-image

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -217,26 +217,26 @@ jobs:
           KO_DOCKER_REPO: ghcr.io/${{ github.repository }}/${{ matrix.subproject }}
         working-directory: ${{ matrix.subproject }}
 
-  scan-operator-image: #TODO: Use digest instead of tag from build-push-operator-image
-    name: Scan operator image
-    runs-on: ubuntu-latest
-    needs:
-      - prepare
-      - build-push-operator-image
-    strategy:
-      fail-fast: false
-      matrix:
-        subproject: ${{ fromJson(needs.prepare.outputs.operators) }}
-    steps:
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.28.0
-        env:
-          TRIVY_USERNAME: ${{ secrets.GITHUB_ACTOR }}
-          TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          image-ref: 'ghcr.io/${{ github.repository }}/${{ matrix.subproject }}@${{ needs.build-push-operator-image.outputs.image-tag }}'
-          exit-code: '1'
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+#  scan-operator-image: #TODO: Use digest instead of tag from build-push-operator-image
+#    name: Scan operator image
+#    runs-on: ubuntu-latest
+#    needs:
+#      - prepare
+#      - build-push-operator-image
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        subproject: ${{ fromJson(needs.prepare.outputs.operators) }}
+#    steps:
+#      - name: Run Trivy vulnerability scanner
+#        uses: aquasecurity/trivy-action@0.28.0
+#        env:
+#          TRIVY_USERNAME: ${{ secrets.GITHUB_ACTOR }}
+#          TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          image-ref: 'ghcr.io/${{ github.repository }}/${{ matrix.subproject }}@${{ needs.build-push-operator-image.outputs.image-tag }}'
+#          exit-code: '1'
+#          vuln-type: 'os,library'
+#          severity: 'CRITICAL,HIGH'
 
 # TODO: build other subprojects
