--- a/.ort.yml
+++ b/.ort.yml
@@ -3,48 +3,35 @@ excludes:
   - pattern: "test-data/**"
     reason: "TEST_OF"
     comment: "This directory contains test data which are not distributed."
-  - pattern: "CONTRIBUTING.md"
+  - pattern: "**/CONTRIBUTING.md"
     reason: DOCUMENTATION_OF
     comment: "This file contains contribution guidelines which are not distributed."
-  - pattern: "README.md"
+  - pattern: "**/README.md"
     reason: DOCUMENTATION_OF
     comment: "This file contains project description which is not distributed."
   - pattern: ".github/**"
     reason: "BUILD_TOOL_OF"
     comment: "This directory contains GitHub Actions workflows which are not distributed."
-  - pattern: "*_test.go"
+  - pattern: "**/*_test.go"
     reason: "TEST_OF"
     comment: "This file contains test code which is not distributed."
-  - pattern: "test_*.go"
+  - pattern: "**/test_*.go"
     reason: "TEST_OF"
     comment: "This file contains test code which is not distributed."
+  - pattern: docs/**
+    reason: "DOCUMENTATION_OF"
+    comment: "This directory contains documentation which is not distributed."
+  - pattern: "examples/**"
+    reason: "EXAMPLE_OF"
+    comment: This directory contains example files which are not distributed.
 
 curations:
-  packages:
-    - id: "Go::golang.org/x/tools"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/net"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/text"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/sys"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/mod"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/time"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/exp"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/sync"
-      curations: 
-        concluded_license: BSD-3-Clause
-    - id: "Go::golang.org/x/term"
-      curations: 
-        concluded_license: BSD-3-Clause
+  license_findings:
+  - path: "README.md"
+    reason: "DOCUMENTATION_OF"
+    comment: "This file contains project description which is not distributed."
+    concluded_license: NONE
+  - path: "CONTRIBUTING.md"
+    reason: DOCUMENTATION_OF
+    comment: "This file contains contribution guidelines which are not distributed."
+    concluded_license: NONE
