ci: fixing codeql; refactoring ci

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -75,6 +75,10 @@ archives:
     format_overrides:
       - goos: windows
         formats: [zip]
+    files:
+      - LICENSE*
+      - README*
+      - CHANGELOG.md
 
 changelog:
   sort: asc
