ci(coverage): do not fail action for now

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -155,7 +155,7 @@ jobs:
         with:
           filename: ${{ matrix.module }}/cobertura.xml
           badge: true
-          fail_below_min: true
+          fail_below_min: false # TODO: set this to true when our overall coverage has improved
           format: markdown
           indicators: true
           output: both
